[package]
name = "tg-gitlab-status-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
dotenvy = "0.15.7"
log = "0.4.21"
pretty_env_logger = "0.5.0"
serde = "1.0.203"
serde_derive = "1.0.203"
teloxide = { version = "0.12.2", features = ["macros"] }
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
